fix: make hero banner height calc(100vh - 80px) to remove white gap at bottom

--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ p {
 .hero-slider {
   position: relative;
   width: 100%;
-  height: calc(100vh - 90px);
+  height: calc(100vh - 80px);
   min-height: 500px;
   overflow: hidden;
 }
@@ -786,7 +786,7 @@ textarea.form-control {
     top: 90px;
     left: -100%;
     width: 100%;
-    height: calc(100vh - 90px);
+    height: calc(100vh - 80px);
     background-color: var(--color-white);
     flex-direction: column;
     padding: 2rem;
@@ -864,5 +864,6 @@ html {
   scroll-behavior: smooth;
   scroll-padding-top: 80px; /* Offset for fixed header */
 }
+
 
 
